[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/charater/plaer2.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/gameScene.gd" type="Script" id=2]
[ext_resource path="res://assets/ohter/ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sonidos/HÖLINÄ1.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/charater/plaer4.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/charater/plaer1.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/charater/plaer3.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/scirtp/goal2area.gd" type="Script" id=8]
[ext_resource path="res://assets/scirtp/outofbounds.gd" type="Script" id=9]
[ext_resource path="res://assets/ohter/goale.tres" type="ArrayMesh" id=10]
[ext_resource path="res://assets/ohter/maal.tres" type="Material" id=11]
[ext_resource path="res://assets/texturs/taustatesti.gltf" type="PackedScene" id=12]
[ext_resource path="res://assets/ohter/goaltext.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/ohter/ingameUI.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/sonidos/epic fail.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/scirtp/goalsoiun.gd" type="Script" id=16]
[ext_resource path="res://assets/ohter/outofboundstext.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/scirtp/Camera.gd" type="Script" id=18]

[sub_resource type="Environment" id=7]
background_mode = 1
background_color = Color( 0.482353, 0.666667, 0.784314, 1 )
ambient_light_color = Color( 1, 0.996078, 0.941176, 1 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 21.8954, 0.442663, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 9.4252, 1 )

[sub_resource type="ConcavePolygonShape" id=5]
data = PoolVector3Array( -0.0628, 0.8001, -0.0045, -0.0837, 0.6706, 0.4846, -0.0835, 0.6706, -0.0037, -0.0628, 0.8001, -0.0045, -0.0628, 0.8001, 0.4846, -0.0837, 0.6706, 0.4846, -0.0835, 0.6706, -0.0037, -0.0947, 0.3317, -0.492, -0.0832, 0.6706, -0.492, -0.0947, 0.3317, -0.492, -0.0837, 0.6706, 0.4846, -0.0962, 0.331, 0.4846, -0.0947, 0.3317, -0.492, -0.0835, 0.6706, -0.0037, -0.0837, 0.6706, 0.4846, -0.1343, -0.0311, 0.4846, 0.2524, 0.9836, 0.4846, 0.2484, -0.026, 0.4846, -0.1343, -0.0311, 0.4846, -0.0979, 0.914, 0.4846, 0.2524, 0.9836, 0.4846, 0.2289, 0.9237, -0.492, 0.0919, 0.9211, 0.4846, 0.0904, 0.9211, -0.492, 0.2289, 0.9237, -0.492, 0.2314, 0.9237, 0.4846, 0.0919, 0.9211, 0.4846, 0.0919, 0.9211, 0.4846, -0.0117, 0.8825, -0.492, 0.0904, 0.9211, -0.492, -0.0115, 0.8825, -0.0052, 0.0919, 0.9211, 0.4846, -0.0112, 0.8825, 0.4846, -0.0117, 0.8825, -0.492, 0.0919, 0.9211, 0.4846, -0.0115, 0.8825, -0.0052, -0.0947, 0.3317, -0.492, -0.109, 0.0172, 0.4846, -0.1065, 0.0172, -0.492, -0.0947, 0.3317, -0.492, -0.0962, 0.331, 0.4846, -0.109, 0.0172, 0.4846, -0.0115, 0.8825, -0.0052, -0.0628, 0.8001, 0.4846, -0.0628, 0.8001, -0.0045, -0.0115, 0.8825, -0.0052, -0.0112, 0.8825, 0.4846, -0.0628, 0.8001, 0.4846, -0.0117, 0.8825, -0.492, -0.0628, 0.8001, -0.0045, -0.0628, 0.8001, -0.492, -0.0117, 0.8825, -0.492, -0.0115, 0.8825, -0.0052, -0.0628, 0.8001, -0.0045, -0.0628, 0.8001, -0.492, -0.0835, 0.6706, -0.0037, -0.0832, 0.6706, -0.492, -0.0628, 0.8001, -0.492, -0.0628, 0.8001, -0.0045, -0.0835, 0.6706, -0.0037, -0.1343, -0.0311, -0.492, 0.2524, 0.9836, -0.492, -0.0979, 0.914, -0.492, -0.1343, -0.0311, -0.492, 0.2484, -0.026, -0.492, 0.2524, 0.9836, -0.492 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.101295, 0.879258, 0.44538 )

[sub_resource type="ConcavePolygonShape" id=6]
data = PoolVector3Array( -0.0628, 0.8001, -0.0045, -0.0837, 0.6706, 0.4846, -0.0835, 0.6706, -0.0037, -0.0628, 0.8001, -0.0045, -0.0628, 0.8001, 0.4846, -0.0837, 0.6706, 0.4846, -0.0835, 0.6706, -0.0037, -0.0947, 0.3317, -0.492, -0.0832, 0.6706, -0.492, -0.0947, 0.3317, -0.492, -0.0837, 0.6706, 0.4846, -0.0962, 0.331, 0.4846, -0.0947, 0.3317, -0.492, -0.0835, 0.6706, -0.0037, -0.0837, 0.6706, 0.4846, -0.1343, -0.0311, 0.4846, 0.2524, 0.9836, 0.4846, 0.2484, -0.026, 0.4846, -0.1343, -0.0311, 0.4846, -0.0979, 0.914, 0.4846, 0.2524, 0.9836, 0.4846, 0.2289, 0.9237, -0.492, 0.0919, 0.9211, 0.4846, 0.0904, 0.9211, -0.492, 0.2289, 0.9237, -0.492, 0.2314, 0.9237, 0.4846, 0.0919, 0.9211, 0.4846, 0.0919, 0.9211, 0.4846, -0.0117, 0.8825, -0.492, 0.0904, 0.9211, -0.492, -0.0115, 0.8825, -0.0052, 0.0919, 0.9211, 0.4846, -0.0112, 0.8825, 0.4846, -0.0117, 0.8825, -0.492, 0.0919, 0.9211, 0.4846, -0.0115, 0.8825, -0.0052, -0.0947, 0.3317, -0.492, -0.109, 0.0172, 0.4846, -0.1065, 0.0172, -0.492, -0.0947, 0.3317, -0.492, -0.0962, 0.331, 0.4846, -0.109, 0.0172, 0.4846, -0.0115, 0.8825, -0.0052, -0.0628, 0.8001, 0.4846, -0.0628, 0.8001, -0.0045, -0.0115, 0.8825, -0.0052, -0.0112, 0.8825, 0.4846, -0.0628, 0.8001, 0.4846, -0.0117, 0.8825, -0.492, -0.0628, 0.8001, -0.0045, -0.0628, 0.8001, -0.492, -0.0117, 0.8825, -0.492, -0.0115, 0.8825, -0.0052, -0.0628, 0.8001, -0.0045, -0.0628, 0.8001, -0.492, -0.0835, 0.6706, -0.0037, -0.0832, 0.6706, -0.492, -0.0628, 0.8001, -0.492, -0.0628, 0.8001, -0.0045, -0.0835, 0.6706, -0.0037, -0.1343, -0.0311, -0.492, 0.2524, 0.9836, -0.492, -0.0979, 0.914, -0.492, -0.1343, -0.0311, -0.492, 0.2484, -0.026, -0.492, 0.2524, 0.9836, -0.492 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.0247481, 0.850266, 0.576348 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 3, 6, 8 )

[sub_resource type="BoxShape" id=11]
extents = Vector3( 3, 7, 4 )

[node name="sceneRoot" type="Spatial"]
pause_mode = 2
script = ExtResource( 2 )

[node name="game" type="Spatial" parent="."]
pause_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="game"]
environment = SubResource( 7 )

[node name="players" type="Spatial" parent="game"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -6.97875, 0.443109, -0.198862 )

[node name="plaer2" parent="game/players" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.56977, 0, 0 )

[node name="plaer3" parent="game/players" instance=ExtResource( 7 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 13.7845, -0.000301361, -0.0976081 )

[node name="plaer4" parent="game/players" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 18.7399, -0.000293732, 0.498935 )

[node name="plaer1" parent="game/players" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.71233, 0.0128453, 0.274653 )

[node name="StaticBody" type="StaticBody" parent="game"]

[node name="CollisionShape4" type="CollisionShape" parent="game/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 17.9903, 0 )
shape = SubResource( 1 )

[node name="CollisionShape3" type="CollisionShape" parent="game/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.554, 9, 0.438107 )
shape = SubResource( 2 )

[node name="CollisionShape2" type="CollisionShape" parent="game/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.6131, 9, 0.219053 )
shape = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="game/StaticBody"]
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="game"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.368, 31.114 )
fov = 29.5
script = ExtResource( 18 )

[node name="ball" parent="game" groups=["ball"] instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.83398, 0 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="game"]
stream = ExtResource( 4 )
unit_db = 30.0
autoplay = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="game/AudioStreamPlayer3D"]
stream = ExtResource( 4 )
unit_db = 30.0
pitch_scale = 0.97
autoplay = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="game/AudioStreamPlayer3D/AudioStreamPlayer3D"]
stream = ExtResource( 4 )
unit_db = 30.0
pitch_scale = 1.1
autoplay = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="game/AudioStreamPlayer3D/AudioStreamPlayer3D/AudioStreamPlayer3D"]
stream = ExtResource( 4 )
unit_db = 30.0
pitch_scale = 0.93
autoplay = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="game/AudioStreamPlayer3D/AudioStreamPlayer3D/AudioStreamPlayer3D/AudioStreamPlayer3D"]
stream = ExtResource( 4 )
unit_db = 30.0
pitch_scale = 1.18
autoplay = true

[node name="goale" type="MeshInstance" parent="game"]
transform = Transform( 8, 0, 0, 0, 8, 0, 0, 0, 8, -12.6047, 0.598332, 0 )
mesh = ExtResource( 10 )
skeleton = NodePath("../..")
material/0 = ExtResource( 11 )

[node name="StaticBody" type="StaticBody" parent="game/goale"]
script = ExtResource( 16 )

[node name="CollisionShape" type="CollisionShape" parent="game/goale/StaticBody"]
shape = SubResource( 5 )

[node name="goal1area" type="Area" parent="game/goale"]
script = ExtResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="game/goale/goal1area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0889616, 0, 0 )
shape = SubResource( 8 )

[node name="goale2" type="MeshInstance" parent="game"]
transform = Transform( -8, 0, -1.20797e-06, 0, 8, 0, 1.20797e-06, 0, -8, 12.898, 0.42014, -1.08291 )
mesh = ExtResource( 10 )
skeleton = NodePath("../goale")
material/0 = ExtResource( 11 )

[node name="StaticBody" type="StaticBody" parent="game/goale2"]
script = ExtResource( 16 )

[node name="CollisionShape" type="CollisionShape" parent="game/goale2/StaticBody"]
shape = SubResource( 6 )

[node name="goal2area" type="Area" parent="game/goale2"]
script = ExtResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="game/goale2/goal2area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.145, 0, 0 )
shape = SubResource( 9 )

[node name="taustatesti" parent="game" instance=ExtResource( 12 )]
transform = Transform( 9.81514, 0, 0, 0, 9.81514, 0, 0, 0, 9.81514, 0, 9.39526, 4.18785 )

[node name="outofbounds" type="Area" parent="game"]
script = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="game/outofbounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 0, 0 )
shape = SubResource( 10 )

[node name="CollisionShape2" type="CollisionShape" parent="game/outofbounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, 0 )
shape = SubResource( 11 )

[node name="outofboundssound" type="AudioStreamPlayer" parent="game/outofbounds"]
stream = ExtResource( 15 )
volume_db = 5.0

[node name="outofboundstext" parent="game/outofbounds" instance=ExtResource( 17 )]
transform = Transform( 5.08579, 0, 0, 0, 5.08579, 0, 0, 0, 5.08579, 0, 4.21047, 4.18268 )

[node name="uiRoot" parent="." instance=ExtResource( 14 )]
pause_mode = 2

[node name="goaltext" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.59887, 0 )

[connection signal="goal" from="game/ball" to="." method="_on_ball_goal"]
[connection signal="outOfBounds" from="game/ball" to="." method="_on_ball_outOfBounds"]
[connection signal="finished" from="game/AudioStreamPlayer3D" to="uiRoot" method="_on_AudioStreamPlayer3D_finished"]
[connection signal="body_entered" from="game/goale/goal1area" to="." method="_on_goal1area_body_entered"]
[connection signal="body_entered" from="game/goale2/goal2area" to="." method="_on_goal2area_body_entered"]
[connection signal="reset" from="game/outofbounds/outofboundstext" to="." method="_on_outofboundstext_reset"]
[connection signal="reset" from="goaltext" to="." method="_on_goaltext_reset"]
